# flake-templates

./: flake.nix
javascript/: flake.nix
jupyter/: flake.nix  pyproject.toml
jupyter-torch/: pyproject.toml
python/: pyproject.toml
