[tool.poetry]
name = "tts-tests"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.0, <3.12"
TTS = "^0.19.0"
sentencepiece = "^0.1.99"
torch = {version = ">=2.0.0, !=2.0.1, !=2.1.0"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
pyright = "^1.1.333"
jupyter = "^1.0.0"
datasets = "^2.14.6"
sentencepiece = "^0.1.99"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

