[tool.poetry]
name = "data-science"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.0, <3.12"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pyright = "*"
jupyter = "*"
ipywidgets = "*"
numpy = "*"
pandas = "*"
matplotlib = "*"
seaborn = "*"
scipy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

